fix layout bugs

--- a/assets/css/accueille.css
+++ b/assets/css/accueille.css
@@ -222,7 +222,7 @@ ul{
 .footer-col ul li p{
 	font-size: 16px;
 	text-transform: capitalize;
-	color: #ffffff;
+	color: #ffffff; 
 	text-decoration: none;
 	font-weight: 300;
 	color: #bbbbbb;
@@ -237,8 +237,9 @@ ul{
 }
 
 .footer-bottom{
-    background-color: white;
-    max-width: 1170px;
+    background-color: #24262b;
+    /* max-width: 1170px; */
+    width: 100%;
     margin: auto;
     color: #bbbbbb;
     font-size: 13px;
@@ -246,8 +247,12 @@ ul{
 }
 .content{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-end;
+    padding: 20px;
+}
+.content p{
+    margin: 0!important;
 }
 /*.child{
    
@@ -317,7 +322,7 @@ ul{
     width: 100px;
     cursor: pointer;
 }
-.box {
+.boxx {
     width: auto;
 }
 /* .radio{
@@ -447,4 +452,3 @@ padding: 20px;
     background-color: coral;
     color: white;
 }
-
